--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -25,9 +25,29 @@
 
         <div class="modal-body">
             <form #formData="ngForm" (ngSubmit)="getAdminData(formData.value)">
-                <li class="form-check" *ngFor="let item of adminArr; let i=index" class="list">
-                  <input class="form-check-input" type="Checkbox" value="item.adminName" name="admin" (change)="onCheckboxChange()" [(ngModel)]="item.isSelected">{{item.adminName}}
-                  <!-- <label class="admin-panelist" for="panelistName"></label> -->
+                <li class="form-check" class="list">
+                  <div>
+                    <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                        <thead>
+                        <tr>
+                            <th>Checkbox</th>
+                            <th>Panelist Name</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let item of adminArr; let i=index">
+                            <td><input class="form-check-input" type="Checkbox" value="item.adminName" name="admin" (change)="onCheckboxChange()" [(ngModel)]="item.isSelected"></td>
+                            <td>{{item.adminName}}</td>
+                        </tr>
+                        </tbody>
+                        <tbody *ngIf="adminArr?.length == 0">
+                          <tr>
+                            <td colspan="3" class="no-data-available">No data!</td>
+                          </tr>
+                        </tbody>
+                    </table>
+                  </div>
+
                 </li>
                 <button class="btn btn-success" type="submit" data-bs-dismiss="modal">Save</button>
             </form> 
