--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -74,10 +74,10 @@
               </span>
             </div>
             <div class="col-sm-3 dates-data">
-              <span><input class="form-control" type="date" id="pre-placement" name="round" [(ngModel)]="obj.roundDate"></span>
+              <span><input class="form-control" type="date" min="{{this.date}}"  placeholder="dd-mm-yyyy" id="pre-placement" name="date" [(ngModel)]="obj.roundDate"></span>
             </div>
             <div class="col-sm-3 dates-data">
-              <span><input class="form-control" type="time" id="appt" name="round" [(ngModel)]="obj.roundTime"></span>
+              <span><input class="form-control" type="time"  id="appt" name="round" [(ngModel)]="obj.roundTime"></span>
             </div>
             <div class="col-sm-1">
               <span class="remove glyphicon glyphicon-trash" role="button" (click)="removeDates(i)" *ngIf="checkIndex(i)"></span>
