--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -82,14 +82,14 @@
                   <div class="form-group row border border-dark py-4">
                     <div *ngFor="let obj of contactPersons; let i = index">
                       <div class="col-sm-4 input-short d-inline-flex">
-                          <input class="form-control" type="text" id="contactName" name="contactDetails" placeholder="Name" [(ngModel)]="obj.contactName">
+                          <input class="form-control" type="text" id="contactName" name="contactName" placeholder="Name" required [(ngModel)]="obj.contactName">
                       </div>
   
                       <div class="col-sm-4 input-short d-inline-flex">
-                          <input class=" form-control" type="email" placeholder="Email" name="contactDetails" id="email" required [(ngModel)]="obj.contactEmail"/>
+                          <input class=" form-control" type="email" placeholder="Email" name="contactEmail" id="email" required [(ngModel)]="obj.contactEmail"/>
                       </div>
                       <div class="col-sm-4 input-short d-inline-flex">
-                          <input class=" form-control" type="tel" id="fnum" placeholder="Number" name="contactDetails" [(ngModel)]="obj.contactPhone"/>
+                          <input class=" form-control" type="tel" id="fnum" placeholder="Number" name="contactPhone" required [(ngModel)]="obj.contactPhone"/>
                       </div>
                       <div class="col-sm-1 my-2 d-inline-flex">
                         <span class="delete-icon glyphicon glyphicon-trash space" (click)="removeContact(i)" *ngIf="checkIndex(i)">
@@ -175,7 +175,7 @@
                   <div class="form-group row border border-dark py-4">
                     <div *ngFor="let obj of contactPersons; let i = index">
                       <div class="col-sm-4 input-short d-inline-flex">
-                          <input class="form-control" type="text" id="contactName" name="contactDetails" placeholder="Name" [(ngModel)]="obj.contactName">
+                          <input class="form-control" type="text" id="contactName" name="contactName" placeholder="Name" [(ngModel)]="obj.contactName">
                       </div>
   
                       <div class="col-sm-4 input-short d-inline-flex">
@@ -183,7 +183,7 @@
                             class=" form-control"
                             type="email"
                             placeholder="Email"
-                            name="contactDetails"
+                            name="contactEmail"
                             id="email"
                             required
                             [(ngModel)]="obj.contactEmail"/>
@@ -195,7 +195,7 @@
                             type="tel"
                             id="fnum"
                             placeholder="Number"
-                            name="contactDetails"
+                            name="contactPhone"
                             [(ngModel)]="obj.contactPhone"/>
                       </div>
                       <div class="col-sm-1 my-2 d-inline-flex">
@@ -409,8 +409,14 @@
             </thead>
             <tbody>
               <tr class="view" *ngFor="let item of specificEntityData">
+                
                 <td>{{ item.entity_name }}</td>
-                <td>{{ item.coordinator_name }}</td>
+                <!-- <td >
+                  {{item | json }}
+
+                 <tr *ngFor="let details of item.contactDetails;let i=index">{{details['contact'+i].contactEmail}} - {{details['contact'+i].contactName}} - {{details['contact'+i].contactPhone}}</tr>
+                </td> -->
+                <td>{{ item.coordinator_name}}</td>
                 <td>{{ item.coordinator_contact }}</td>
                 <td>{{ item.coordinator_email }}</td>
               </tr>
