made changes in panel form

--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -162,7 +162,7 @@
     </div>
 
     <div class="container-fluid my-5" *ngFor="let drive of specificDriveData">
-        <!-- {{drive | json}} -->
+        {{drive | json}}
         <div>
             <table class="table table-bordered table-striped table-hover display">
                 <thead>
