--- a/src/app/components/drive-management/panel-form/panel-form.component.css
+++ b/src/app/components/drive-management/panel-form/panel-form.component.css
@@ -13,3 +13,16 @@ input{
     width: 60%;
     margin-left: 27%;
 }
+
+.drive-switch{
+    width: 80%;
+    margin-left: 230px;
+}
+
+.switch-drive{
+    float:right;
+}
+.bread{
+    margin-left: -1%;
+}
+
