--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -60,10 +60,11 @@
                       <label for="entity_type">Choose Entity Type:</label>
                     </div>
                     <div class="col-sm-9">
-                      <select class="form-select form-select-lg" aria-label="Default select example" id="entityType" name="entity_type">
+                      <!-- <select class="form-select form-select-lg" id="entity_type" name="entity_type" ngModel> -->
+                      <select class="form-select form-select-lg" aria-label="Default select example" id="entityType" name="entity_type" ngModel>
                         <option selected>Select Entity Type</option>
-                        <option value="admin">College</option>
-                        <option value="panelist">University</option>
+                        <option>College</option>
+                        <option>University</option>
                       </select>
                     </div>
                   </div>
@@ -151,10 +152,10 @@
                       <label for="entity_type">Choose Entity Type:</label>
                     </div>
                     <div class="col-sm-9">
-                      <select class="form-select form-select-lg" aria-label="Default select example" id="entityType" name="entity_type">
+                      <select class="form-select form-select-lg" aria-label="Default select example" id="entityType" name="entity_type" ngModel>
                         <option selected>Select Entity Type</option>
-                        <option value="admin">College</option>
-                        <option value="panelist">University</option>
+                        <option>College</option>
+                        <option>University</option>
                       </select>
                     </div>
                   </div>
