--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -39,21 +39,21 @@
                   <div>
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
-                        <label for="fname" >First Name:</label>
+                        <label for="fname" > Name:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="text" id="firstName" name="firstName" placeholder="Enter First Name" [(ngModel)]="newPanelist.firstName">
+                        <input class="form-control" type="text" id="Name" name="Name" placeholder="Enter Name" [(ngModel)]="newPanelist.name">
                       </div>
                     </div>
                     
-                    <div class="form-group row">
+                    <!-- <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
                         <label for="lname" >Last Name:</label>
                       </div>
                       <div class="col-sm-9">
                         <input class="form-control" type="text" id="lastName" name="lastName" placeholder="Enter Last Name" [(ngModel)]="newPanelist.lastName"><br>
                       </div>
-                    </div>
+                    </div> -->
     
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
@@ -132,19 +132,17 @@
       <table class="table table-bordered table-striped table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
         <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th>Name</th>
           <th>Email</th>
           <th>Contact</th>
           <th>Action</th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let panelist of panelistData">
-          <td>{{panelist.panelist_first_name}}</td>
-          <td>{{panelist.panelist_last_name}}</td>
-          <td>{{panelist.panelist_email}}</td>
-          <td>{{panelist.panelist_contact}}</td>
+        <tr *ngFor="let panelist of finalPanelistData">
+          <td>{{panelist.name}}</td>
+          <td>{{panelist.email}}</td>
+          <td>{{panelist.phone_number}}</td>
           <td class="text-center">
             <span class="text-danger">
               <!-- (click)="openEditPanelistFormModal(); replicateData(panelist)" -->
@@ -171,37 +169,37 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Create Panelist</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Edit Panelist</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
     
             <div class="modal-body">
-                <form #panelistForm="ngForm" (ngSubmit)="postPanelistData(panelistForm.value)">
+                <form #panelistForm="ngForm" (ngSubmit)="editPanelist(panelistForm)">
                   <div>
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
-                        <label for="fname" >First Name:</label>
+                        <label for="fname" >Name:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="text" id="fname" name="panelist_first_name" placeholder="Enter First Name" ngModel >
+                        <input class="form-control" type="text" id="fname" name="name" placeholder="Enter  Name" value="{{PanelistName}}" [(ngModel)]="updatedPanelist.name" >
                       </div>
                     </div>
                     
-                    <div class="form-group row">
+                    <!-- <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
                         <label for="lname" >Last Name:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="text" id="lname" name="panelist_last_name" placeholder="Enter Last Name" ngModel><br>
+                        <input class="form-control" type="text" id="lname" name="panelist_last_name" placeholder="Enter Last Name" value="{{PanelistLastName}}" [(ngModel)]="this.newPanelist.lastName"><br>
                       </div>
-                    </div>
+                    </div> -->
     
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
                         <label for="email" ><b>Email:</b></label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="email" placeholder="Enter Email"  name="panelist_email" id="email" value="{{PanelistEmail}}" required ngModel [disabled]="true"><br>
+                        <input class="form-control" type="email" placeholder="Enter Email"  name="email" id="email" value="{{PanelistEmail}}" [(ngModel)]="this.updatedPanelist.email" [disabled]="true"><br>
                       </div>
                     </div>
                 
@@ -210,7 +208,7 @@
                         <label for="phone" >Phone Number:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" value="{{PanelistContact}}" name="panelist_contact" ngModel [disabled]="true"><br>
+                        <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" value="{{PanelistContact}}" name="phone_number" [(ngModel)]="this.updatedPanelist.phone_number" [disabled]="true"><br>
                       </div>
                     </div>
   
@@ -218,14 +216,22 @@
                       <div class="col-sm-3 col-form-label">
                         <label for="role" >Choose Role: </label>
                       </div>
-                      <div class="col-sm-2" *ngFor="let item of userRoles">
+                      <div class="col-sm-9">
+                        <select class="form-control" id="role" name="role" [(ngModel)]="this.updatedPanelist['custom:role']">
+                          <option selected>Choose From dropdown</option>
+                          <option value="admin">Admin</option>
+                          <option value="panelist">Panelist</option>
+                          <option value="Viewer">Viewer</option>
+                          </select>
+                      </div>
+                      <!-- <div class="col-sm-2" *ngFor="let item of userRoles">
                         <div class="form-check" [(ngModel)]="item.done">
                           <input class="form-check-input" type="checkbox" id="flexCheckDefault">
                           <label class="form-check-label" for="flexCheckDefault">
                             {{item.roleName}}
                           </label>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                     
                     <div class="modal-footer">
