--- a/src/styles.css
+++ b/src/styles.css
@@ -125,5 +125,10 @@ html, body{
     margin-left: 16.5%;
 }
 
+.switch-drive{
+    float:right;
+    margin-right: 10px;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
