--- a/src/app/components/drive-management/panel-form/panel-form.component.css
+++ b/src/app/components/drive-management/panel-form/panel-form.component.css
@@ -26,3 +26,12 @@ input{
     margin-left: -1%;
 }
 
+.success-button{
+    float: right;
+    margin-right: 8%;
+}
+
+.panel-list{
+    width: 80%;
+    margin-left: 230px;
+}
